kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: "https://alertmanager.${SECRET_DOMAIN}/?apikey=${GATUS_AUTHELIA_APIKEY}"
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
  hostnames:
    # yaml-language-server-disable
    - alertmanager.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: "https://prometheus.${SECRET_DOMAIN}/?apikey=${GATUS_AUTHELIA_APIKEY}"
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
  hostnames:
    # yaml-language-server-disable
    - prometheus.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
